gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/ActivateTraineeException.java
package com.example.gymcrm.api.rest.error.exception;

public class ActivateTraineeException extends RuntimeException {
    public ActivateTraineeException(String message) {
        super(message);
    }
}
